--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>TALAT</title>
 
 </head>
+  
+  <style media="screen">
+  body{
+    background-color: powderblue;
+  }
+</style>
 
 <body>
 
